src/App/App.css
@import url('https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;700&display=swap');
@font-face {
  font-family: DnD;
  src: url(DnDC.ttf);
}

body {
  background-image: url('/src/game/assets/sprites/Background.png');
  background-color: black;
  background-position: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: cover;
  font-family: 'Martel Sans', sans-serif;
}

h1,
h2,
h3 {
  color: #fff;
  text-align: center;
  font-family: 'DnD', serif;
  font-size: 5.5em;
  text-shadow: 2px 2px #000;
}

ul {
  padding: 0px 0px 0px 15px;
}

li {
  list-style-type: none;
}

.landing-pic {
  border: 2px solid #7db1b3;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}
.landing-pic img {
  flex-shrink: 0;
  min-width: 100%;
  min-height: 100%;
}

.tech-icon {
  width: 80px;
  height: 50px;
  object-fit: cover;
}

.dev-pic {
  margin: 20px;
  margin-bottom: 0px;
  border: 2px solid #7db1b3;
}

.arcade-page {
  background-color: black;
  max-width: 100vw;
  max-height: 100vh;
}

#story-container {
  padding: 30px;
  /* max-height: 100%; */
}

#tech-header {
  font-size: 3.5em;
  margin-top: 5px;
  letter-spacing: 0.05em;
}

#footer {
  position: fixed;
  bottom: 5px;
  right: 5px;
  padding: 3px;
}

